--- a/app/(site)/globals.css
+++ b/app/(site)/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+img + em {
+  font-weight: 600;
+  margin-top: -20px;
+  display: block;
+  text-align: center;
+  font-size: 14px;
+}
