--- a/app/(site)/globals.css
+++ b/app/(site)/globals.css
@@ -9,3 +9,13 @@ img + em {
   text-align: center;
   font-size: 14px;
 }
+
+ul {
+  list-style: none;
+  text-indent: -20px;
+  margin-left: 20px;
+}
+
+li {
+  margin-bottom: 10px;
+}
