feat: not-found err for blogs and 404

--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,12 @@ ul {
 li {
   margin-bottom: 10px;
 }
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
